2001-02-07  Kjartan Maraas  <kmaraas@gnome.org>

	* GNOME_GtkHTML_EBrowser.oaf.in: Added. Not hooked up.
	
2001-02-07  Radek Doulik  <rodo@ximian.com>

	* ebrowser-widget.c (ebrowser_url_requested): try to create
	moniker eloader for UNKNOWN protocol
	(ebrowser_link_clicked): load for UNKNOWN too
	(ebrowser_load): try to create moniker eloader for UNKNOWN
	protocol

	* eloader-moniker.[ch]: new files, new eloader implementation,
	tries to use monikers to get text/html bonobo/stream

2001-01-04  Dietmar Maurer  <dietmar@helixcode.com>

	* test-ebrowser.c (open_browser): _unref the property bag

2001-01-03  Dietmar Maurer  <dietmar@helixcode.com>

	* test-ebrowser.c (destroy_browser, prop_changed_cb, open_browser): 
	use the new listener code.
	
2001-01-01  Michael Meeks  <michael@helixcode.com>

	* test-ebrowser.c (destroy_browser, prop_changed_cb, open_browser): 
	remove old style listener code until Dietmar can get to it.

2000-12-07  Radek Doulik  <rodo@helixcode.com>

	* Makefile.am: rename GNOME_EBrowser.oafinfo to GNOME_GtkHTML_EBrowser.oafinfo
	(INCLUDES): fixed for build dir != src dir

	* ebrowser.h: updated OAFIIDs

	* GNOME_EBrowser.oafinfo: shift EBrowser to GNOME_GtkHTML
	namespace as Michael suggested

2000-11-02  Larry Ewing  <lewing@helixcode.com>

	* test-ebrowser.c (open_browser): studly caps that were missed.

2000-11-01  Matt Bissiri  <bissiri@eecs.umich.edu>

	* Makefile.am: Add missing "\" after "test_history_SOURCES = " so that
	test-history will link correctly.

	* .cvsignore: Add `test-history'.

2000-11-01  Miguel de Icaza  <miguel@helixcode.com>

	* ebrowser-widget.c (ebrowser_destroy): Destroy history.
	(ebrowser_init): Init history
	(ebrowser_set_arg): Handle ARG_HISTORY

	* test-history.c (main): New file, used to test the history code. 

	* ebrowser-ui.c, ebrowser-ui.h: Move the UI code here.  Add new verbs.

	* ebrowser-history.c, ebrowser-history.h: New files.

2000-10-31  Miguel de Icaza  <miguel@helixcode.com>
